@@ -5,8 +5,10 @@ UI Client
 - Use constants in emulate.py
 - Long Up to hidden menu
 - 10 minute timeout to Kodi from UI Client
+- Drop to Favourites on timeout
 Python UI
 - Improved tagged deletes in Recordings
+- Added sorting in Recorodings
 
 [B]2.9.4[/B]
 - WOL create dialog changed in Matrix
